# todopad

./: .env  .env.release  .gitignore  Cargo.toml  Dockerfile  README.md  deploy.sh  fly.toml  litestream.yml  package-lock.json  package.json  tailwind.config.js  tailwind.css  todopad.db  todos.db
.sqlx/: query-03d0fd9f1a6d84080db67a8f1e42cdb3304840c0cd16f1603e79ce803b09a442.json  query-22ba8f0d3c80b9a4ee02dcb64ae9a6a7fedf7a8aeacd474d59823ffacd3ef473.json  query-250d21771b6384c5c634f605ebe1c626feb26ddf8512827e8ab9b6cc5a168539.json  query-29207820780f5e863a11c6e945b8923019072ad42d33a7160f85d9c058e01c59.json  query-2bf7faebad5a9f0c43f250ced395432b4403f63c00c53eefc23e8c2631f76ac8.json  query-5484dc8dd7aaee6930d1ff466955dbd38b914e05e80bd82840e36af3a35c44ff.json  query-58f2a10b9cbc9300ae71a0285872c02a4fc2ec97dba07e554ef968a006bdd447.json  query-5a03202cb7440926872953b11a263662c94cdde2a8f93df69a38418fc0704bba.json  query-601ebe3b1e28e6c52eb3099f2f3fe73f07398d8a97d1d0083436197a6ac73cb0.json  query-727b4242424cdc4c4169c73aa1876e4e909d8cae0a59dd260c9b77bbfdda2d45.json  query-817b0f856e003ee3899f5363fd0b9644091d68710c9f12c92ab316e518408dde.json  query-8abfd530592c12f112c8f77c16d925d7b690990b859f943cd3243717d433b255.json  query-99598c85d1537917d22691e5c561b8a35a90ee965a7bdbfc5c4b809f68f14a76.json  query-9a4bb22084a60a855a421da334c0b7313faaa3e0e345852a180059cbe24a7e4e.json  query-9bcb71da178615ae571d1077d2568d7e3017df1333ed93eacbb0c224c1353be9.json  query-a0f4894a71b631e281816e190325791ed9d478c6e9616cd0cea0497f52fc0d4f.json  (+9 more)
UI/: package.json  tailwind.css
api/: README.md  go.mod  (+2 more)
(+140 files in other folders)
