[package]
name = "todopad"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
askama = "0.12.1"
axum = "0.8.1"
axum-extra = { version = "0.9.6", features = ["cookie"] }
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = "0.10.0"
dotenv = "0.15.0"
headers = "0.4.0"
hyper = "1.5.2"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
rand_core = "0.6.4"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite", "chrono", "migrate"] }
tokio = { version = "1.41.1", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0.95"
thiserror = "2.0.9"
tower-sessions = "0.14.0"
